sources += [
  'plugins/solidigm/solidigm-util.c',
  'plugins/solidigm/solidigm-smart.c',
  'plugins/solidigm/solidigm-garbage-collection.c',
  'plugins/solidigm/solidigm-latency-tracking.c',
  'plugins/solidigm/solidigm-log-page-dir.c',
  'plugins/solidigm/solidigm-telemetry.c',
  'plugins/solidigm/solidigm-internal-logs.c',
]
subdir('solidigm-telemetry')
