sources += [
  'plugins/solidigm/solidigm-id-ctrl.c',
  'plugins/solidigm/solidigm-util.c',
  'plugins/solidigm/solidigm-smart.c',
  'plugins/solidigm/solidigm-garbage-collection.c',
  'plugins/solidigm/solidigm-latency-tracking.c',
  'plugins/solidigm/solidigm-log-page-dir.c',
  'plugins/solidigm/solidigm-telemetry.c',
  'plugins/solidigm/solidigm-internal-logs.c',
  'plugins/solidigm/solidigm-market-log.c',
  'plugins/solidigm/solidigm-temp-stats.c',
]
subdir('solidigm-telemetry')

