sources += [
  'plugins/solidigm/solidigm-nvme.c',
  'plugins/solidigm/solidigm-id-ctrl.c',
  'plugins/solidigm/solidigm-util.c',
  'plugins/solidigm/solidigm-smart.c',
  'plugins/solidigm/solidigm-garbage-collection.c',
  'plugins/solidigm/solidigm-latency-tracking.c',
  'plugins/solidigm/solidigm-log-page-dir.c',
  'plugins/solidigm/solidigm-telemetry.c',
  'plugins/solidigm/solidigm-internal-logs.c',
  'plugins/solidigm/solidigm-market-log.c',
  'plugins/solidigm/solidigm-temp-stats.c',
  'plugins/solidigm/solidigm-get-drive-info.c',
  'plugins/solidigm/solidigm-ocp-version.c',
  'plugins/solidigm/solidigm-workload-tracker.c',
]
subdir('solidigm-telemetry')

